--- a/app/src/main/res/layout/download_item.xml
+++ b/app/src/main/res/layout/download_item.xml
@@ -1,13 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal">
 
+    <com.example.myapplication2.View.MyImageView
+        android:id="@+id/downloadgameicon"
+        android:layout_width="105dp"
+        android:layout_height="74dp"
+        android:layout_gravity="center_vertical"
+        android:layout_weight="1"
+        app:srcCompat="?attr/colorControlHighlight" />
+
     <TextView
         android:id="@+id/downloadtv_ss"
-        android:layout_width="match_parent"
-        android:layout_height="81dp"
+        android:layout_width="301dp"
+        android:layout_height="73dp"
         android:layout_gravity="center_vertical"
         android:maxLines="2"
         android:text="@string/下载中心"
